--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "react-sample-components-library",
-  "version": "1.0.2",
+  "name": "@react-components-library/react-sample-components-library",
+  "version": "0.0.3",
   "description": "",
-  "main": "lib/index.js",
-  "browser": "lib/index.umd.js",
-  "module": "lib/index.es.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.es.js",
   "files": [
     "/lib"
   ],
+  "type": "module",
   "scripts": {
     "test": "jest",
     "start": "styleguidist server",
-    "build": "rollup -c",
+    "build": "rm -rf ./lib && rollup -c",
     "prepublishOnly": "rm -rf lib && npm run build",
     "postbuild": "npm pack && tar -xvzf *.tgz && rm -rf package *.tgz",
     "docs:build": "styleguidist build"
@@ -20,33 +20,45 @@
   "author": "",
   "license": "ISC",
   "peerDependencies": {
-    "@emotion/core": "10.x",
-    "@emotion/styled": "10.x",
-    "react": "^16.x",
-    "react-dom": "^16.8.6"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "@emotion/core": "^10.0.14",
-    "@emotion/styled": "^10.0.14",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "21.1.0",
+    "@rollup/plugin-image": "^2.1.1",
+    "@rollup/plugin-json": "4.1.0",
+    "@rollup/plugin-node-resolve": "^13.2.1",
+    "@rollup/plugin-replace": "^4.0.0",
+    "@rollup/plugin-typescript": "^8.3.3",
     "@testing-library/react": "^8.0.7",
     "babel-loader": "^8.0.6",
-    "babel-plugin-emotion": "^10.0.14",
     "babel-plugin-module-resolver": "^3.2.0",
     "jest": "^24.8.0",
-    "jest-emotion": "^10.0.14",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-is": "^18.2.0",
     "react-styleguidist": "^9.1.13",
-    "rollup": "^1.18.0",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.0.1",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-terser": "^5.1.1",
-    "rollup-plugin-uglify": "^6.0.2",
-    "webpack": "^4.38.0"
+    "rollup": "^2.70.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-externals": "^4.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-scss": "^3.0.0",
+    "rollup-plugin-size": "^0.2.2",
+    "rollup-plugin-styles": "^3.0.3",
+    "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.53.0",
+    "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.84",
+    "@mui/material": "^5.8.4",
+    "@mui/styles": "^5.8.0",
+    "isomorphic-style-loader": "^5.1.0"
   }
 }
