--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "@rollup/plugin-image": "^2.1.1",
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "^13.2.1",
-    "@rollup/plugin-replace": "^4.0.0",
+    "@rollup/plugin-replace": "^5.0.1",
     "@rollup/plugin-typescript": "^8.3.3",
     "@testing-library/react": "^8.0.7",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
+    "glob": "^7.1.4",
+    "isomorphic-style-loader": "^5.1.0",
     "jest": "^24.8.0",
+    "path": "^0.12.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-is": "^18.2.0",
@@ -45,6 +48,7 @@
     "rollup": "^2.70.2",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-node-externals": "^4.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-scss": "^3.0.0",
@@ -58,7 +62,6 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.84",
     "@mui/material": "^5.8.4",
-    "@mui/styles": "^5.8.0",
-    "isomorphic-style-loader": "^5.1.0"
+    "@mui/styles": "^5.8.0"
   }
 }
