--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "^13.2.1",
     "@rollup/plugin-replace": "^5.0.1",
-    "@rollup/plugin-typescript": "^8.3.3",
     "@testing-library/react": "^8.0.7",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
@@ -56,6 +55,7 @@
     "rollup-plugin-styles": "^3.0.3",
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.53.0",
+    "rollup-plugin-typescript2": "0.31.2",
     "typescript": "^4.8.4"
   },
   "dependencies": {
