--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@testing-library/react": "^8.0.7",
     "babel-loader": "^8.0.6",
     "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-typescript-to-proptypes": "^2.0.0",
     "glob": "^7.1.4",
     "isomorphic-style-loader": "^5.1.0",
     "jest": "^24.8.0",
@@ -54,8 +55,8 @@
     "rollup-plugin-size": "^0.2.2",
     "rollup-plugin-styles": "^3.0.3",
     "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.53.0",
     "rollup-plugin-typescript2": "0.31.2",
+    "sass": "^1.53.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
