--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,37 @@
 {
   "compilerOptions": {
-    "noEmit": false,
+    "target": "esnext",
+    "module": "esnext",
+    "lib": ["dom", "esnext"],
+    "importHelpers": true,
+    // output .d.ts declaration files for consumers
     "declaration": true,
     "declarationDir": "lib",
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
+    // output .js.map sourcemap files for consumers
     "sourceMap": true,
-    "outDir": "lib",
-    "baseUrl": "./",
-    "paths": {},
-    "allowJs": true,
-    "checkJs": false,
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
+    // match output dir to input dir. e.g. dist/index instead of dist/src/index
+    "rootDir": "src",
+    // stricter type-checking for stronger correctness. Recommended by TS
+    "strict": true,
+    // linter checks for common issues
+    "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
+    // noUnused* overlap with @typescript-eslint/no-unused-vars, can disable if duplicative
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    // use Node's module resolution algorithm, instead of the legacy TS one
     "moduleResolution": "node",
-    "isolatedModules": true,
-    "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    // transpile JSX to React.createElement
     "jsx": "react",
-    "downlevelIteration": true
+    // interop between ESM and CJS modules. Recommended by TS
+    "esModuleInterop": true,
+    // significant perf increase by skipping checking .d.ts files, particularly those in node_modules. Recommended by TS
+    "skipLibCheck": true,
+    // error out if import and file system have a casing mismatch. Recommended by TS
+    "forceConsistentCasingInFileNames": true,
+    // `tsdx build` ignores this option, but it is commonly used when type-checking separately with `tsc`
+    "noEmit": true,
+    "noImplicitAny": true
   },
   "include": ["./**/*.d.ts", "./**/*.ts", "./**/*.tsx", "./**/*.json"],
   "exclude": ["node_modules","lib"]
